--- a/war/ha-search-screen.html
+++ b/war/ha-search-screen.html
@@ -47,7 +47,7 @@
             <button type="button" value="BaseBall" class="btn btn-default btn-lg" onclick="redirectResultPage(this.value)"><img src="../images/baseball.png" ></button> <label> BASEBALL </label>
           </div>
                     <div class=" col-md-3 col-sm-3 col-xs-3 ">
-            <button type="button" value="BasketBall" class="btn btn-default btn-lg" onclick="redirectResultPage(this.value)"><img src="../images/Basketball.png" ></button> <label> BASKETBALL </label>
+            <button type="button" value="BaskeetBall" class="btn btn-default btn-lg" onclick="redirectResultPage(this.value)"><img src="../images/Basketball.png" ></button> <label> BASKETBALL </label>
            </div>
                     <div class=" col-md-3 col-sm-3 col-xs-3 ">
             <button type="button" value="BeerPong" class="btn btn-default btn-lg" onclick="redirectResultPage(this.value)"><img src="../images/beerPong.png" ></button> <label> BEERPONG </label>
